# HiddenShield

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  agent.md  debug_watermark.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.kiro/specs/hidden-shield-mvp/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/hidden-shield-mvp-phase2/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: coding-guidelines.md
docs/: CI-CD-签名配置.md  FFmpeg多平台压制参数方案.md  Flutter双端App设计方案.md  Flutter移动端实施计划.md  MVP上线路线图.md  Pro版本规划.md  匿名反馈后端接口.md  商业化与匿名反馈开发任务清单.md  商业化与匿名反馈方案.md  图片水印裁剪鲁棒性设计.md  图片裁剪取证提取性能优化方案.md  图片音频分片同步水印设计方案.md  图片音频水印鲁棒性基准.md  技术债-视频画面水印.md  技术架构方案.md  桌面移动云同步联调指南.md  用户协议.md  移动端桌面同步协议草案.md  移动端真机联调手册.md  移动端规划.md  统一账户与云同步重设计方案.md  重复水印防覆盖回归清单.md  重复水印防覆盖方案.md  阶梯定价策略 (Pricing Strategy).md  隐盾（HiddenShield）版权保护SaaS平台.md  隐私政策.md  音频RecoveryV2短包纠错设计.md
feedback-backend/: Cargo.toml
feedback-backend/src/: lib.rs  main.rs  schema.rs  storage.rs
hidden-shield/: package.json
hidden-shield/src-tauri/: Cargo.toml  tauri.conf.json
hidden-shield/src-tauri/src/: main.rs
mobile_app/: README.md  analysis_options.yaml  pubspec.yaml
mobile_app/android/app/: build.gradle.kts
mobile_app/assets/: hiddenshield.system.json
mobile_app/ios/Runner/: Info.plist
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/lib/: main.dart
mobile_app/lib/app/: app.dart  bootstrap.dart  bootstrap_io.dart  bootstrap_web.dart  mobile_app_state.dart  mobile_shell.dart  system_config.dart  theme.dart
mobile_app/lib/bridge/: local_preview_watermark_bridge.dart  rust_watermark_bridge.dart  watermark_bridge.dart  (+1 more)
mobile_app/rust/: Cargo.toml  README.md
mobile_app/rust/src/: api.rs  frb_generated.rs
mobile_app/rust_builder/: pubspec.yaml
mobile_app/test/: mobile_app_state_test.dart  mobile_verify_reason_test.dart  rewrite_preflight_test.dart  sync_transport_test.dart  widget_test.dart
scripts/: cloud-sync-mock-server.mjs  dev-stack.mjs  mobile-doctor.mjs  run-cloud-sync-ci.mjs  verify-audio-duration-preflight.mjs  verify-audio-duration-rule.mjs  verify-cloud-sync-contract.mjs  verify-cloud-sync-e2e.mjs  verify-mobile-sync-stub.mjs
scripts/release/: import-apple-certificate.sh  inject-windows-signing.ps1  prepare-apple-notarization.sh  verify-release.mjs
src/: App.vue  styles.css
src-tauri/: Cargo.toml  Info.plist  nsis-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  identity.rs  lib.rs  main.rs  tsa.rs
src-tauri/src/commands/: billing.rs  identity.rs  mod.rs  probe.rs  sync.rs  telemetry.rs  transcode.rs  vault.rs  verify.rs
src-tauri/src/db/: billing.rs  mod.rs  queries.rs  schema.rs
src-tauri/src/encoder/: hw_detect.rs  mod.rs  presets.rs  tonemap.rs
src-tauri/src/pipeline/: error.rs  ffmpeg.rs  image_watermark.rs  mod.rs  progress.rs  scheduler.rs  system_guard.rs  watermark.rs
src-tauri/src/sync/: cloud.rs  mod.rs  server.rs  storage.rs
src-tauri/src/telemetry/: anonymous.rs  mod.rs
src-tauri/src/utils/: fs.rs  hash.rs
src-tauri/testdata/tsa/: freetsa-response-20260423.hex
src/components/: AIContentMarker.vue  CopyrightCard.vue  DropZone.vue  HelpCenter.vue  IdentitySetup.vue  PlatformSelector.vue  ProBadge.vue  ProgressPanel.vue  ResultPage.vue  SettingsPanel.vue  SourceWarnings.vue  SubscriptionPanel.vue  SystemStatus.vue  TelemetryBanner.vue  UpdateBanner.vue  VaultTimeline.vue
src/content/: legal.ts
src/lib/: analytics.ts  tauri-api.ts
src/views/: VaultView.vue  VerifyView.vue  WorkbenchView.vue
tmp-tsa/: free-headers.txt  free-resp.tsr  free-token.der  req.tsq
watermark-core/: Cargo.toml  README.md
watermark-core/src/: audio.rs  error.rs  image.rs  lib.rs  payload.rs  service.rs
(+30 files in other folders)
