[package]
name = "hidden_shield"
version = "0.1.0"
description = "HiddenShield desktop MVP scaffold"
authors = ["Codex"]
license = "CC-BY-NC-4.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hidden_shield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
crc32fast = "1.4"
hostname = "0.4"
hound = "3.5"
hex = "0.4"
image = "0.25"
log = "0.4"
nalgebra = "0.33"
realfft = "3"
regex-lite = "0.1"
reqwest = { version = "0.12", features = ["stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12"
obfstr = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tar = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
xz2 = "0.1"
zip = "2"

[dev-dependencies]
proptest = "1.4"
tempfile = "3"
