[package]
name = "hidden-shield-mobile-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
hex = "0.4"
hound = "3.5"
image = "0.25"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
watermark-core = { path = "../../watermark-core" }
